# pytest-randomly

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  pytest_randomly.py  requirements-compile.sh  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  test_pytest_randomly.py  tox.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
requirements/: compile.py  compile.sh  py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pytest_randomly.py
src/pytest_randomly/: __init__.py  compat.py
tests/: test_it.py  test_pytest_randomly.py
tests/requirements/: compile.py  py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
tmp_pytester/: test_sample.py
