[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "pytest-randomly"
version = "3.15.0"
description = "Pytest plugin to randomly order tests and control random.seed."
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
  "pytest",
  "random",
  "randomise",
  "randomize",
  "randomly",
]
license = {text = "MIT"}
authors = [{name = "Adam Johnson", email = "me@adamj.eu"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  'importlib-metadata>=3.6; python_version < "3.10"',
  "pytest",
]
[project.urls]
Changelog = "https://github.com/pytest-dev/pytest-randomly/blob/main/CHANGELOG.rst"
Funding = "https://adamj.eu/books/"
Repository = "https://github.com/pytest-dev/pytest-randomly"
[project.entry-points.pytest11]
randomly = "pytest_randomly"

[tool.isort]
add_imports = [
    "from __future__ import annotations"
]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """

[tool.coverage.run]
branch = true
parallel = true
source = [
    "pytest_randomly",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    ".tox/**/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
