[metadata]
name = pytest-randomly
version = 3.5.0
description = Pytest plugin to randomly order tests and control random.seed.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/pytest-dev/pytest-randomly
project_urls =
    Changelog = https://github.com/pytest-dev/pytest-randomly/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pytest, random, randomize, randomise, randomly
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = pytest_randomly
include_package_data = True
install_requires =
    importlib-metadata ; python_version < "3.8"
    pytest
python_requires = >=3.6
zip_safe = False

[options.entry_points]
pytest11 =
    randomly = pytest_randomly

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
