[metadata]
name = pytest_randomly
version = 3.15.0
description = Pytest plugin to randomly order tests and control random.seed.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/pytest-randomly
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = pytest, random, randomize, randomise, randomly
project_urls =
    Changelog = https://github.com/pytest-dev/pytest-randomly/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    pytest
    importlib-metadata>=3.6.0 ;python_version < "3.10"
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    randomly = pytest_randomly

[coverage:run]
branch = True
parallel = True
source =
    pytest_randomly
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
